2013-06-14  Micah Bunting <amnykon@gmail.com>
        * editor/gtk/editor.c: Removed extra if statement in build_terrain_menu.

2013-06-13  Micah Bunting <amnykon@gmail.com>
        * client/common/develop.c client/ai/greedy.c server/pregame.c
        server/develop.c common/cards.c common/cards.h: Hides the DevelDeck
        structure and adds accessor functions.

2013-06-13  Roland Clobus <rclobus@rclobus.nl>
	* server/server.c: Don't log about leaving players twice.
	* Makefile.am: Make clean cleans results of make reindent and doxygen.

2013-06-10  Roland Clobus <rclobus@rclobus.nl>
	* configure.ac, common/gtk/player-icon.c: Take ownership of the pointer
	to fix the bug introduced on 2013-06-07.
	* client/gtk/notification.c, client/gtk/notification.h,
	client/gtk/offline.c, client/gtk/interface.c, configure.ac: Show at
	most one message in the notification area. Support for old versions of
	libnotify is no longer required. Fixed memory leak for each
	notification.
	* Doxyfile.in, configure.ac, Makefile.am: Added Doxygen support.
	* common/set.h, common/set.c: Doxygen documentation.
	* client/gtk/player.c: Removed unused array.

2013-06-09  Roland Clobus <rclobus@rclobus.nl>
	* omf.make, macros/gnome-autogen.sh: Synchronised from gnome-common
	3.7.4-1, which adds support for automake 1.13.

2013-06-07  Roland Clobus <rclobus@rclobus.nl>
	* common/map.c, common/map.h, client/ai/greedy.c: Map the resource
	to the terrain and vice versa.
	* common/gtk/common_gtk.c, common/gtk/common_gtk.h: Added code from
	Gtk+3 to make the port from Gtk+2 easier.
	* client/gtk/data/style-ai.png, client/gtk/data/style-ai.svg,
	client/gtk/data/Makefile.am: Replaced the png by a svg (with proper
	credits to Jakub Steiner)
	* common/gtk/player-icon.c, common/gtk/player-icon.h,
	client/gtk/player.c, client/gtk/name.c: Update to the player icon code.
	Set a minimum size on the slider in the 'Change Player Name' dialog.
	Use a larger icon.

2013-06-06  Roland Clobus <rclobus@rclobus.nl>